<resources>
    <string name="app_name">Carbook</string>

    <string name="add_user">User</string>

    <string name="title_services">Servicios</string>

    <string name="requiredMessage">Campo requerido</string>

    <!-- TODO: For register-->
    <string name="add_mother_lastname">Mother LastName</string>
    <string name="add_father_lastname">Father LastName</string>
    <string name="add_name">Name</string>
    <string name="add_dni">DNI</string>
    <string name="add_birthdate">BirthData (DD//MM/YYYY)</string>
    <string name="add_company_name">Company Name</string>
    <string name="add_rol">Rol</string>
    <string name="add_email">Email</string>
    <string name="add_password">Password</string>
    <string name="verify_password">Password</string>
    <string name="add_ruc">Ruc</string>
    <!-- -->

    <!--Shared-->
    <string name="nav_profile">Perfil</string>
    <string name="nav_services">Mis Servicios</string>

    <!--Cliente-->
    <string name="nav_adverts">Mis Anuncios</string>
    <string name="tab_title_personal_info">Datos Personales</string>
    <string name="tab_title_locals">Locales</string>
    <string name="tab_title_services">Galeria de Servicios</string>

    <!--Proveedor-->
    <string name="nav_available_adverts">Anuncios Disponibles</string>
    <string name="nav_postulations">Postulaciones</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_adverts">Anuncios</string>
    <string name="sample_description">Descripcion de Ejemplo</string>
    <string name="sample_cantidad_postulantes">Cantidad de Postulantes: </string>


    <string-array name="providerNav">
        <item>Perfil</item>
        <item>Anuncios Disponibles</item>
        <item>Postulaciones</item>
        <item>Mis Servicios</item>
    </string-array>
    <string-array name="clientNav">
        <item>Perfil</item>
        <item>Mis Anuncios</item>
        <item>Mis Servicios</item>
    </string-array>

    <!-- For register-->
    <string-array name="rol_names">
        <item>Usuario</item>
        <item>Proveedor</item>
    </string-array>
    <string name="title_activity_local">LocalActivity</string>
    <string name="title_activity_advert_detail">Detalle de Anuncio</string>
    <string name="title_activity_local_manage">LocalManageActivity</string>
    <string name="title_activity_advert_detail_gallery">Galería Anuncio</string>
    <string name="title_activity_postulations">Postulaciones</string>
    <string name="title_activity_postulation_detail">Detalle Postulación</string>
    <string name="title_activity_advert_create">Crear Anuncio</string>

    <string name="spinner_title">SpinnerExample</string>

    <!--CAMERA--> 
    <string name="about_app">Aqui podra añadir una imagen de su local. \n\n</string> 
    <string name="capture_video_switch_text">Seleccionar una imagen  </string>

    <!-- For Create Advert-->
    <string name="publicar">Add</string>

</resources>


